# via_mobi_test

./: .gitignore  README.md  pyproject.toml
api/: main.py
api/routers/: caption.py  health_check.py
api/schemas/: caption.py
api/services/: caption.py
api/utils/: caption_generator.py  generator_models.py
gradio_app/: config.py  main.py  utils.py
